# call_R2_merge

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp
src/: CallR2.hpp  ListSuffix.hpp  Truncate.hpp  main.cpp
test/: R1.fq  source.fq  test.sh
test2/: test.sh
tests/CallR2/: test.sh
tests/ListSuffix/: test.sh
tests/Truncate/: test.sh
